Feat: add Notice Edit Feature

--- a/templates/home/admin/event_form.html
+++ b/templates/home/admin/event_form.html
@@ -3,6 +3,11 @@
 
 {% block title %}{{ title }} - Admin{% endblock %}
 
+{% block extra_css %}
+<link href="https://nepalidatepicker.sajanmaharjan.com.np/v5/nepali.datepicker/css/nepali.datepicker.v5.0.6.min.css" rel="stylesheet" type="text/css"/>
+{% endblock %}
+
+
 {% block content %}
 <div class="min-h-screen bg-gray-100 py-8">
     <div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -77,6 +82,14 @@
             </form>
         </div>
 
-    </div>
-</div>
+
+{% block extra_js %}
+<script src="https://nepalidatepicker.sajanmaharjan.com.np/v5/nepali.datepicker/js/nepali.datepicker.v5.0.6.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+    window.onload = function() {
+        var mainInput = document.getElementById("nepali-datepicker-event");
+        mainInput.nepaliDatePicker();
+    };
+</script>
+{% endblock %}
 {% endblock %}
