--- a/templates/home/notice_detail.html
+++ b/templates/home/notice_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load custom_filters %}
 
 {% block title %}{{ notice.title }} - Sagarmatha Ordinary School{% endblock %}
 
@@ -34,7 +35,7 @@
         <h1 class="text-3xl md:text-4xl font-bold mb-3">{{ notice.title }}</h1>
         <div class="flex items-center text-blue-100">
             <i class="far fa-calendar mr-2"></i>
-            <span>{{ notice.date_bs }}</span>
+            <span>{{ notice.date_bs | nepali_date }}</span>
         </div>
     </div>
 </section>
@@ -107,7 +108,7 @@
                             <i class="far fa-calendar text-blue-600 mt-1 mr-3"></i>
                             <div>
                                 <p class="text-sm text-gray-500">Published On</p>
-                                <p class="font-medium text-gray-900">{{ notice.date_bs }}</p>
+                                <p class="font-medium text-gray-900">{{ notice.date_bs | nepali_date }}</p>
                             </div>
                         </div>
                         <div class="flex items-start">
@@ -160,7 +161,7 @@
                                 {% endif %}
                             </div>
                             <p class="text-xs text-gray-500">
-                                <i class="far fa-calendar mr-1"></i>{{ related.date_bs }}
+                                <i class="far fa-calendar mr-1"></i>{{ related.date_bs | nepali_date }}
                             </p>
                         </a>
                         {% endfor %}
