--- a/templates/base.html
+++ b/templates/base.html
@@ -79,6 +79,7 @@
                     <a href="{% url 'home:index' %}" class="hover:text-mbman-blue transition">Home</a>
                     <a href="{% url 'home:index' %}#programs" class="hover:text-mbman-blue transition">Programs</a>
                     <a href="{% url 'home:index' %}#notices" class="hover:text-mbman-blue transition">Notices</a>
+                    <a href="{% url 'home:gallery' %}" class="hover:text-mbman-blue transition">Gallery</a>
                     <a href="{% url 'home:index' %}#faculty" class="hover:text-mbman-blue transition">Faculty</a>
                     <a href="{% url 'home:about' %}" class="hover:text-mbman-blue transition">About</a>
                     <a href="{% url 'home:index' %}#contact" class="hover:text-mbman-blue transition">Contact</a>
@@ -125,6 +126,7 @@
             <a href="{% url 'home:index' %}" class="block py-3 border-b text-gray-700">Home</a>
             <a href="{% url 'home:index' %}#programs" class="block py-3 border-b text-gray-700">Programs</a>
             <a href="{% url 'home:index' %}#notices" class="block py-3 border-b text-gray-700">Notices</a>
+            <a href="{% url 'home:gallery' %}" class="block py-3 border-b text-gray-700">Gallery</a>
             <a href="{% url 'home:index' %}#faculty" class="block py-3 border-b text-gray-700">Faculty</a>
             <a href="{% url 'home:index' %}#about" class="block py-3 border-b text-gray-700">About Us</a>
             <a href="{% url 'home:index' %}#contact" class="block py-3 border-b text-gray-700">Contact Us</a>
