--- a/templates/base.html
+++ b/templates/base.html
@@ -77,12 +77,12 @@
             <div class="hidden lg:flex items-center">
                 <div class="flex items-center space-x-8 font-medium text-gray-700 text-[15px]">
                     <a href="{% url 'home:index' %}" class="hover:text-mbman-blue transition">Home</a>
-                    <a href="{% url 'home:index' %}#programs" class="hover:text-mbman-blue transition">Programs</a>
-                    <a href="{% url 'home:index' %}#notices" class="hover:text-mbman-blue transition">Notices</a>
+                    <a href="{% url 'home:programs' %}" class="hover:text-mbman-blue transition">Programs</a>
+                    <a href="{% url 'home:notices_page' %}" class="hover:text-mbman-blue transition">Notices</a>
                     <a href="{% url 'home:gallery' %}" class="hover:text-mbman-blue transition">Gallery</a>
-                    <a href="{% url 'home:index' %}#faculty" class="hover:text-mbman-blue transition">Faculty</a>
+                    <a href="{% url 'home:faculty' %}" class="hover:text-mbman-blue transition">Faculty</a>
                     <a href="{% url 'home:about' %}" class="hover:text-mbman-blue transition">About</a>
-                    <a href="{% url 'home:index' %}#contact" class="hover:text-mbman-blue transition">Contact</a>
+                    <a href="{% url 'home:contact' %}" class="hover:text-mbman-blue transition">Contact</a>
                 </div>
 
                 <!-- User/Login Section -->
@@ -124,12 +124,12 @@
         <!-- Mobile Menu Dropdown -->
         <div id="mobile-menu" class="hidden lg:hidden bg-white border-t pb-4 px-4 shadow-lg">
             <a href="{% url 'home:index' %}" class="block py-3 border-b text-gray-700">Home</a>
-            <a href="{% url 'home:index' %}#programs" class="block py-3 border-b text-gray-700">Programs</a>
-            <a href="{% url 'home:index' %}#notices" class="block py-3 border-b text-gray-700">Notices</a>
+            <a href="{% url 'home:programs' %}" class="block py-3 border-b text-gray-700">Programs</a>
+            <a href="{% url 'home:notices_page' %}" class="block py-3 border-b text-gray-700">Notices</a>
             <a href="{% url 'home:gallery' %}" class="block py-3 border-b text-gray-700">Gallery</a>
-            <a href="{% url 'home:index' %}#faculty" class="block py-3 border-b text-gray-700">Faculty</a>
-            <a href="{% url 'home:index' %}#about" class="block py-3 border-b text-gray-700">About Us</a>
-            <a href="{% url 'home:index' %}#contact" class="block py-3 border-b text-gray-700">Contact Us</a>
+            <a href="{% url 'home:faculty' %}" class="block py-3 border-b text-gray-700">Faculty</a>
+            <a href="{% url 'home:about' %}" class="block py-3 border-b text-gray-700">About Us</a>
+            <a href="{% url 'home:contact' %}" class="block py-3 border-b text-gray-700">Contact Us</a>
 
             <!-- Mobile User/Login -->
             <div class="mt-6 pt-6 border-t border-gray-100">
