--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -467,15 +467,20 @@
                 </div>
 
                 <div class="flex items-start space-x-5 group">
-                    <a href="tel:{{ contact_info.phone|default:'+977-021-540000' }}" class="flex items-start w-full hover:bg-green-50 p-2 rounded-lg transition -ml-2">
-                        <div class="w-14 h-14 bg-mbman-blue/10 rounded-xl flex items-center justify-center flex-shrink-0 group-hover:bg-green-100 transition">
-                            <i class="fas fa-phone-alt text-mbman-blue text-xl group-hover:text-green-600 transition"></i>
+                    <div class="w-14 h-14 bg-mbman-blue/10 rounded-xl flex items-center justify-center flex-shrink-0 group-hover:bg-green-100 transition">
+                        <i class="fas fa-phone-alt text-mbman-blue text-xl group-hover:text-green-600 transition"></i>
+                    </div>
+                    <div class="ml-4">
+                        <h4 class="font-bold text-gray-900 text-lg mb-2 group-hover:text-green-700 transition">Call Us</h4>
+                        <div class="flex flex-col space-y-1">
+                            {% for phone in contact_info.phone|split_comma %}
+                            <a href="tel:{{ phone }}" class="text-gray-600 hover:text-green-600 hover:underline transition">
+                                {{ phone }}
+                            </a>
+                            {% endfor %}
+                            <span class="text-gray-500 text-sm">Mon-Fri, 9:00 AM - 5:00 PM</span>
                         </div>
-                        <div class="ml-4">
-                            <h4 class="font-bold text-gray-900 text-lg mb-2 group-hover:text-green-700 transition">Call Us</h4>
-                            <p class="text-gray-600">{{ contact_info.phone }}<br>Mon-Fri, 9:00 AM - 5:00 PM</p>
-                        </div>
-                    </a>
+                    </div>
                 </div>
 
                 <div class="flex items-start space-x-5 group">
